[gd_scene load_steps=113 format=2]

[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_006.png" type="Texture" id=1]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_007.png" type="Texture" id=2]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_008.png" type="Texture" id=3]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_011.png" type="Texture" id=4]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_003.png" type="Texture" id=5]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_009.png" type="Texture" id=6]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_000.png" type="Texture" id=7]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_010.png" type="Texture" id=8]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_001.png" type="Texture" id=9]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_005.png" type="Texture" id=10]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_016.png" type="Texture" id=11]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_017.png" type="Texture" id=12]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_004.png" type="Texture" id=13]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Idle Blink/Wraith_03_Idle Blinking_002.png" type="Texture" id=14]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_009.png" type="Texture" id=15]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_007.png" type="Texture" id=16]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_008.png" type="Texture" id=17]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_006.png" type="Texture" id=18]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_000.png" type="Texture" id=19]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_003.png" type="Texture" id=20]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_002.png" type="Texture" id=21]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_010.png" type="Texture" id=22]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_006.png" type="Texture" id=23]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_014.png" type="Texture" id=24]
[ext_resource path="res://Scripts/Enemy/States/Motion/Idle.gd" type="Script" id=25]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_002.png" type="Texture" id=26]
[ext_resource path="res://Scripts/Enemy/States/Should_attack.gd" type="Script" id=27]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_012.png" type="Texture" id=28]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_015.png" type="Texture" id=29]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_000.png" type="Texture" id=30]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_004.png" type="Texture" id=31]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_005.png" type="Texture" id=32]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_003.png" type="Texture" id=33]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_009.png" type="Texture" id=34]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_010.png" type="Texture" id=35]
[ext_resource path="res://Scripts/Enemy/States/Combat/Attack.gd" type="Script" id=36]
[ext_resource path="res://Scripts/Enemy/States/Combat/Celebrating.gd" type="Script" id=37]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_001.png" type="Texture" id=38]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_001.png" type="Texture" id=39]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_001.png" type="Texture" id=40]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_013.png" type="Texture" id=41]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_011.png" type="Texture" id=42]
[ext_resource path="res://Sound effects/last_enemy.wav" type="AudioStream" id=43]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_003.png" type="Texture" id=44]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_003.png" type="Texture" id=45]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_004.png" type="Texture" id=46]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_005.png" type="Texture" id=47]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_000.png" type="Texture" id=48]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_006.png" type="Texture" id=49]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_004.png" type="Texture" id=50]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_007.png" type="Texture" id=51]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_008.png" type="Texture" id=52]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_011.png" type="Texture" id=53]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Attacking/Wraith_03_Attack_008.png" type="Texture" id=54]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_002.png" type="Texture" id=55]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_007.png" type="Texture" id=56]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_011.png" type="Texture" id=57]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_009.png" type="Texture" id=58]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_007.png" type="Texture" id=59]
[ext_resource path="res://Sound effects/wraith_death.wav" type="AudioStream" id=60]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_008.png" type="Texture" id=61]
[ext_resource path="res://Sound effects/wraith_pain.wav" type="AudioStream" id=62]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Walking/Wraith_03_Moving Forward_010.png" type="Texture" id=63]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_002.png" type="Texture" id=64]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_005.png" type="Texture" id=66]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_012.png" type="Texture" id=67]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_000.png" type="Texture" id=68]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_013.png" type="Texture" id=70]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_006.png" type="Texture" id=71]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_004.png" type="Texture" id=72]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_010.png" type="Texture" id=75]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Dying/Wraith_03_Dying_005.png" type="Texture" id=76]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_009.png" type="Texture" id=77]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_011.png" type="Texture" id=78]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_014.png" type="Texture" id=79]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Casting Spells/Wraith_03_Casting Spells_001.png" type="Texture" id=80]
[ext_resource path="res://Scripts/Enemy/Enemy_State_Machine.gd" type="Script" id=82]
[ext_resource path="res://Scripts/Enemy/Enemy_controller.gd" type="Script" id=83]
[ext_resource path="res://Scripts/Enemy/States/Motion/Patrol.gd" type="Script" id=84]
[ext_resource path="res://fonts/SourceCodePro-Bold.ttf" type="DynamicFontData" id=86]
[ext_resource path="res://Scripts/Enemy/States/Combat/Die.gd" type="Script" id=87]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_008.png" type="Texture" id=88]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_010.png" type="Texture" id=89]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_011.png" type="Texture" id=90]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_004.png" type="Texture" id=91]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_001.png" type="Texture" id=92]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_002.png" type="Texture" id=93]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_003.png" type="Texture" id=94]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_005.png" type="Texture" id=95]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_000.png" type="Texture" id=96]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_006.png" type="Texture" id=97]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_007.png" type="Texture" id=98]
[ext_resource path="res://img/Assets/Wraith/PNG Sequences/Hurt/Wraith_03_Hurt_009.png" type="Texture" id=99]
[ext_resource path="res://Scripts/Enemy/States/Combat/Hurt.gd" type="Script" id=100]
[ext_resource path="res://Scripts/Enemy/States/Get_hit.gd" type="Script" id=101]
[ext_resource path="res://Scripts/Enemy/States/Sees_player.gd" type="Script" id=103]
[ext_resource path="res://Scripts/Enemy/States/Motion/Chase.gd" type="Script" id=104]
[ext_resource path="res://Scripts/UI/Display.gd" type="Script" id=105]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 86 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 86 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 38 ), ExtResource( 26 ), ExtResource( 33 ), ExtResource( 50 ), ExtResource( 32 ), ExtResource( 23 ), ExtResource( 16 ), ExtResource( 54 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 42 ) ],
"loop": true,
"name": "Attacking",
"speed": 22.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 80 ), ExtResource( 64 ), ExtResource( 44 ), ExtResource( 72 ), ExtResource( 66 ), ExtResource( 18 ), ExtResource( 56 ), ExtResource( 17 ), ExtResource( 77 ), ExtResource( 22 ), ExtResource( 78 ), ExtResource( 67 ), ExtResource( 70 ), ExtResource( 79 ), ExtResource( 29 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": false,
"name": "Casting",
"speed": 12.0
}, {
"frames": [ ExtResource( 48 ), ExtResource( 39 ), ExtResource( 21 ), ExtResource( 45 ), ExtResource( 31 ), ExtResource( 47 ), ExtResource( 49 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 15 ), ExtResource( 63 ), ExtResource( 57 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 14 ), ExtResource( 5 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 4 ) ],
"loop": false,
"name": "Idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 96 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 91 ), ExtResource( 95 ), ExtResource( 97 ), ExtResource( 98 ), ExtResource( 88 ), ExtResource( 99 ), ExtResource( 89 ), ExtResource( 90 ) ],
"loop": false,
"name": "Hurt",
"speed": 22.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 40 ), ExtResource( 55 ), ExtResource( 20 ), ExtResource( 46 ), ExtResource( 76 ), ExtResource( 71 ), ExtResource( 59 ), ExtResource( 61 ), ExtResource( 58 ), ExtResource( 75 ), ExtResource( 53 ), ExtResource( 28 ), ExtResource( 41 ), ExtResource( 24 ) ],
"loop": true,
"name": "Dead",
"speed": 18.0
} ]

[sub_resource type="Animation" id=4]
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attacking" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0909091, 0.181818, 0.272727, 0.363636, 0.454545, 0.545455, 0.636364, 0.727273, 0.818182, 0.909091 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=5]
length = 1.58333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Casting" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666667, 0.75, 0.833333, 0.916667, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 17 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Celebrating"
length = 3.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Casting" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimationPlayer:playback_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=7]
length = 4.0
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("../StateMachine/Die")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 2.7, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_dead"
}, {
"args": [  ],
"method": "Mr_Stark_I_Dont_feel_so_good"
}, {
"args": [  ],
"method": "attitude_gone"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1, 4 ),
"transitions": PoolRealArray( 1.6245, 1.51572 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.5
step = 0.0454545
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Hurt" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0454545, 0.0909091, 0.136364, 0.181818, 0.227273, 0.272727, 0.318182, 0.363636, 0.409091, 0.454545 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HitBox:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=9]
length = 1.83333
step = 0.166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1, 1.16667, 1.33333, 1.5, 1.66667, 1.83333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 11 ]
}

[sub_resource type="Animation" id=10]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="CapsuleShape2D" id=11]
radius = 20.3393
height = 18.8741

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 218, 135.5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 30.5, 46 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 22.5, 34.9533 )

[node name="Enemy" type="KinematicBody2D"]
z_index = 1
z_as_relative = false
collision_layer = 2
collision_mask = 9
script = ExtResource( 83 )

[node name="Display" type="Node2D" parent="."]
z_index = 5
script = ExtResource( 105 )

[node name="Health" type="Label" parent="Display"]
margin_top = -100.0
margin_right = 70.0
margin_bottom = -69.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.0235294, 0.0235294, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Lives"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Display"]
margin_left = -248.0
margin_top = -100.0
margin_right = 252.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="Body"]
frames = SubResource( 3 )
animation = "Attacking"
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body"]
method_call_mode = 1
anims/Attack = SubResource( 4 )
anims/Casting = SubResource( 5 )
anims/Celebrating = SubResource( 6 )
anims/Dying = SubResource( 7 )
anims/Hurt = SubResource( 8 )
anims/Idle = SubResource( 9 )
anims/Run = SubResource( 10 )

[node name="GroundRayCast" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( 16.6693, 1.55277 )
enabled = true
cast_to = Vector2( 0, 60 )
collision_mask = 8

[node name="WallRayCast" type="RayCast2D" parent="Body"]
visible = false
position = Vector2( -1, 0 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 8

[node name="HitBox" type="Area2D" parent="Body"]
visible = false
collision_layer = 64
collision_mask = 16

[node name="Collision" type="CollisionShape2D" parent="Body/HitBox"]
position = Vector2( 0, -5 )
shape = SubResource( 11 )

[node name="Player_Detector" type="Area2D" parent="Body"]
visible = false
collision_layer = 0

[node name="Vision" type="CollisionShape2D" parent="Body/Player_Detector"]
shape = SubResource( 12 )

[node name="Attack_area" type="Area2D" parent="Body"]
visible = false
position = Vector2( 10, -6 )
collision_layer = 0
collision_mask = 33

[node name="Damage_zone" type="CollisionShape2D" parent="Body/Attack_area"]
shape = SubResource( 13 )

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
shape = SubResource( 14 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 82 )
start_state = NodePath("Patrol")

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource( 84 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 25 )

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource( 104 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 36 )

[node name="Celebrating" type="Node" parent="StateMachine"]
script = ExtResource( 37 )

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 100 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 87 )

[node name="Got_hit" type="Node" parent="StateMachine"]
script = ExtResource( 101 )

[node name="Sees_player" type="Node" parent="StateMachine"]
script = ExtResource( 103 )

[node name="Should_attack" type="Node" parent="StateMachine"]
script = ExtResource( 27 )

[node name="SoundEffects" type="Node2D" parent="."]

[node name="LastEnemy" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 43 )

[node name="Pain" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 62 )

[node name="Death" type="AudioStreamPlayer2D" parent="SoundEffects"]
stream = ExtResource( 60 )
[connection signal="animation_finished" from="Body/AnimationPlayer" to="StateMachine/Hurt" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="Body/AnimationPlayer" to="StateMachine/Attack" method="_on_animation_finished"]
[connection signal="animation_finished" from="Body/AnimationPlayer" to="StateMachine/Idle" method="_on_animation_finished"]
[connection signal="body_entered" from="Body/Player_Detector" to="StateMachine/Chase" method="_on_Player_Detector_body_entered"]
[connection signal="body_entered" from="Body/Player_Detector" to="StateMachine/Sees_player" method="_on_player_entered"]
[connection signal="body_exited" from="Body/Player_Detector" to="StateMachine/Chase" method="_on_Player_Detector_body_exited"]
[connection signal="area_entered" from="Body/Attack_area" to="StateMachine/Attack" method="_on_Attack_area_area_entered"]
[connection signal="body_entered" from="Body/Attack_area" to="StateMachine/Should_attack" method="_on_player_in_attack_range"]
[connection signal="state_changed" from="StateMachine" to="Display" method="_on_StateMachine_state_changed"]
